membership provider, role manager and profiles defined in web.config + tested; service reference updated

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -21,9 +21,59 @@
     <add key="Core.Service.Password" value="password"/>
     <add key="ServerRoles" value="HOST"/>
   </appSettings>
+  <connectionStrings>
+    <add name="MySqlConnection" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=P@ssw0rd;Database=Cumulus;" />
+  </connectionStrings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+
+    <authentication mode="Windows" >
+      <forms name="LifeCycleManager" />
+    </authentication>
+    <authorization>
+      <deny users="?" />
+    </authorization>
+    
+    <membership defaultProvider="AspNetMembershipProvider" userIsOnlineTimeWindow="15">
+      <providers>
+        <clear />
+        <add
+          name="AspNetMembershipProvider"
+          type="System.Web.Security.SqlMembershipProvider"
+          connectionStringName="MySqlConnection"
+          applicationName="LifeCycleManager"
+          enablePasswordRetrieval="false"
+          enablePasswordReset="true"
+          requiresQuestionAndAnswer="true"
+          requiresUniqueEmail="true"
+          passwordFormat="Hashed" />
+      </providers>
+    </membership>
+
+    <roleManager enabled ="true" defaultProvider ="SqlRoleProvider" >
+      <providers>
+        <add name ="SqlRoleProvider"
+          type="System.Web.Security.SqlRoleProvider"
+          connectionStringName="MySqlConnection"
+          applicationName="LifeCycleManager"/>
+      </providers>
+    </roleManager>
+
+    <profile enabled="True" defaultProvider="AspNetProfileProvider">
+      <providers>
+        <clear />
+        <add name="AspNetProfileProvider" 
+             type="System.Web.Profile.SqlProfileProvider" 
+             connectionStringName="MySqlConnection" 
+             applicationName="LifeCycleManager" />
+      </providers>
+      <properties>
+        <add name="FullName" />
+      </properties>
+    </profile>
+    
   </system.web>
   <system.webServer>
     <handlers>
