comment out sample added

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -34,6 +34,7 @@
     </authentication>
     <authorization>
       <deny users="?" />
+      <!--<deny roles="Administrator"/>-->
     </authorization>
     
     <membership defaultProvider="AspNetMembershipProvider" userIsOnlineTimeWindow="15">
