--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -22,7 +22,7 @@
     <add key="ServerRoles" value="HOST"/>
   </appSettings>
   <connectionStrings>
-    <add name="MySqlConnection" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=P@ssw0rd;Database=Cumulus;" />
+    <add name="MySqlConnection" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;"/>
   </connectionStrings>
 
   <system.web>
@@ -30,7 +30,7 @@
     <httpRuntime targetFramework="4.5" />
 
     <authentication mode="Windows" >
-      <forms name="LifeCycleManager" />
+      <forms name="Cumulus" />
     </authentication>
     <authorization>
       <deny users="?" />
@@ -44,7 +44,7 @@
           name="AspNetMembershipProvider"
           type="System.Web.Security.SqlMembershipProvider"
           connectionStringName="MySqlConnection"
-          applicationName="LifeCycleManager"
+          applicationName="Cumulus"
           enablePasswordRetrieval="false"
           enablePasswordReset="true"
           requiresQuestionAndAnswer="true"
@@ -58,7 +58,7 @@
         <add name ="SqlRoleProvider"
           type="System.Web.Security.SqlRoleProvider"
           connectionStringName="MySqlConnection"
-          applicationName="LifeCycleManager"/>
+          applicationName="Cumulus"/>
       </providers>
     </roleManager>
 
@@ -68,7 +68,7 @@
         <add name="AspNetProfileProvider" 
              type="System.Web.Profile.SqlProfileProvider" 
              connectionStringName="MySqlConnection" 
-             applicationName="LifeCycleManager" />
+             applicationName="Cumulus" />
       </providers>
       <properties>
         <add name="FullName" />
