service reference updated; assembly loading adjusted; configuration keys modified; Set default name to core endpoint; CurrentUserDataProvider adjusted; logging made more performant; replaced equals with ==

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -13,16 +13,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="LifeCycleManager.Extensions" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
-    <add key="Core.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
-    <add key="Core.Container.Name" value="Core" />
-    <add key="Core.Endpoint" value="http://localhost:51719/api/Core.svc"/>
-    <add key="Core.Service.User" value="user"/>
-    <add key="Core.Service.Password" value="password"/>
-    <add key="ServerRoles" value="HOST"/>
+
+    <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
+    <add key="LifeCycleManager.TestServer.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
+    <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
+    <add key="LifeCycleManager.Endpoint.Core" value="http://localhost:51719/api/Core.svc"/>
+    <add key="LifeCycleManager.Service.Core.User" value="user"/>
+    <add key="LifeCycleManager.Service.Core.Password" value="password"/>
+    <add key="LifeCycleManager.Server.ServerRoles" value="HOST"/>
+
+    <add key="Application.Name" value="Cumulus"/>
   </appSettings>
   <connectionStrings>
-    <add name="MySqlConnection" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;"/>
+    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;"/>
   </connectionStrings>
 
   <system.web>
@@ -30,7 +33,7 @@
     <httpRuntime targetFramework="4.5" />
 
     <authentication mode="Windows" >
-      <forms name="Cumulus" />
+      <forms name="LifeCycleManager" />
     </authentication>
     <authorization>
       <deny users="?" />
@@ -43,7 +46,7 @@
         <add
           name="AspNetMembershipProvider"
           type="System.Web.Security.SqlMembershipProvider"
-          connectionStringName="MySqlConnection"
+          connectionStringName="LcmSecurityData"
           applicationName="Cumulus"
           enablePasswordRetrieval="false"
           enablePasswordReset="true"
@@ -57,17 +60,17 @@
       <providers>
         <add name ="SqlRoleProvider"
           type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="MySqlConnection"
+          connectionStringName="LcmSecurityData"
           applicationName="Cumulus"/>
       </providers>
     </roleManager>
 
-    <profile enabled="True" defaultProvider="AspNetProfileProvider">
+    <profile enabled="true" defaultProvider="AspNetProfileProvider">
       <providers>
         <clear />
         <add name="AspNetProfileProvider" 
              type="System.Web.Profile.SqlProfileProvider" 
-             connectionStringName="MySqlConnection" 
+             connectionStringName="LcmSecurityData" 
              applicationName="Cumulus" />
       </providers>
       <properties>
