--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -6,11 +6,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="LifeCycleManager.ExtensionsFolder" value="" />
-    <add key="Core.Container.Name" value="Core" />
-    <add key="Core.Endpoint" value="http://test/api/Core.svc" />
-    <add key="Core.Service.User" value="user" />
-    <add key="Core.Service.Password" value="password" />
+    <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
+    <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
+    <add key="LifeCycleManager.Endpoint.Core" value="http://test/api/Core.svc" />
+    <add key="LifeCycleManager.Service.Core.User" value="user" />
+    <add key="LifeCycleManager.Service.Core.Password" value="password" />
   </appSettings>
   <log4net>
     <!-- Define some output appenders -->
