--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -17,76 +17,54 @@
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="LifeCycleManager.TestServer.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
-    <add key="LifeCycleManager.Endpoint.Core" value="http://localhost:51719/api/Core.svc"/>
-    <add key="LifeCycleManager.Service.Core.User" value="user"/>
-    <add key="LifeCycleManager.Service.Core.Password" value="password"/>
-    <add key="LifeCycleManager.Server.ServerRoles" value="HOST"/>
+    <add key="LifeCycleManager.Endpoint.Core" value="http://localhost:51719/api/Core.svc" />
+    <add key="LifeCycleManager.Service.Core.User" value="user" />
+    <add key="LifeCycleManager.Service.Core.Password" value="password" />
+    <add key="LifeCycleManager.Server.ServerRoles" value="HOST" />
 
-    <add key="Application.Name" value="Cumulus"/>
+    <add key="Application.Name" value="Cumulus" />
   </appSettings>
   <connectionStrings>
-    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;"/>
+    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;" />
   </connectionStrings>
 
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
 
-    <authentication mode="Windows" >
+    <authentication mode="Windows">
       <forms name="LifeCycleManager" />
     </authentication>
     <authorization>
       <deny users="?" />
       <!--<deny roles="Administrator"/>-->
     </authorization>
-    
+
     <membership defaultProvider="AspNetMembershipProvider" userIsOnlineTimeWindow="15">
       <providers>
         <clear />
-        <add
-          name="AspNetMembershipProvider"
-          type="System.Web.Security.SqlMembershipProvider"
-          connectionStringName="LcmSecurityData"
-          applicationName="Cumulus"
-          enablePasswordRetrieval="false"
-          enablePasswordReset="true"
-          requiresQuestionAndAnswer="true"
-          requiresUniqueEmail="true"
-          passwordFormat="Hashed" />
+        <add name="AspNetMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="LcmSecurityData" applicationName="Cumulus" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" requiresUniqueEmail="true" passwordFormat="Hashed" />
       </providers>
     </membership>
 
-    <roleManager enabled ="true" defaultProvider ="SqlRoleProvider" >
+    <roleManager enabled="true" defaultProvider="SqlRoleProvider">
       <providers>
-        <add name ="SqlRoleProvider"
-          type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="LcmSecurityData"
-          applicationName="Cumulus"/>
+        <add name="SqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="LcmSecurityData" applicationName="Cumulus" />
       </providers>
     </roleManager>
 
     <profile enabled="true" defaultProvider="AspNetProfileProvider">
       <providers>
         <clear />
-        <add name="AspNetProfileProvider" 
-             type="System.Web.Profile.SqlProfileProvider" 
-             connectionStringName="LcmSecurityData" 
-             applicationName="Cumulus" />
+        <add name="AspNetProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="LcmSecurityData" applicationName="Cumulus" />
       </providers>
       <properties>
         <add name="FullName" />
       </properties>
     </profile>
-    
+
   </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -133,4 +111,12 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
 </configuration>
