EMTPY_TENANT_ID renamed to TENANT_ID, Default tenant-id handling implemented; default implementation of IAuthenticationProvider created and provided

--- a/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.csproj
@@ -104,6 +104,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.datasvcmap</DependentUpon>
     </Compile>
+    <Compile Include="UserData\DefaultAuthenticationProvider.cs" />
     <Compile Include="UserData\IAuthenticationProvider.cs" />
     <Compile Include="UserData\Identity.cs" />
     <Compile Include="UserData\CurrentUserDataProvider.cs" />
