--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -14,6 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
+    <add key="EntityController.Authentication.Value" value=""/>
+    <add key="EntityController.Authentication.Scheme" value=""/>
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="LifeCycleManager.TestServer.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
