--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -14,10 +14,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Default.Tenant.Id" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89"/>
-    <add key="UserData.Database.Table.Prefix" value="Cumulus.dbo."/>
-    <add key="EntityController.Authentication.Value" value=""/>
-    <add key="EntityController.Authentication.Scheme" value=""/>
+    <add key="Default.Tenant.Id" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
+    <add key="UserData.Database.Table.Prefix" value="Cumulus.dbo." />
+    <add key="EntityController.Authentication.Value" value="" />
+    <add key="EntityController.Authentication.Scheme" value="" />
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="LifeCycleManager.TestServer.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
@@ -29,7 +29,7 @@
     <add key="Application.Name" value="Cumulus" />
   </appSettings>
   <connectionStrings>
-    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;" />
+    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=P@ssw0rd;Database=Cumulus;" />
   </connectionStrings>
 
   <system.web>
@@ -103,7 +103,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -111,16 +111,20 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.webServer>
+  
+<system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer>
-</configuration>
+  </system.webServer></configuration>
