--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -29,7 +29,7 @@
     <add key="Application.Name" value="Cumulus" />
   </appSettings>
   <connectionStrings>
-    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=P@ssw0rd;Database=Cumulus;" />
+    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;" />
   </connectionStrings>
 
   <system.web>
