--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <appSettings>
     <add key="Default.Tenant.Id" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
-    <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
+    <add key="LifeCycleManager.ExtensionsFolder" value="" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
     <add key="LifeCycleManager.Endpoint.Core" value="http://test/api/Core.svc" />
     <add key="LifeCycleManager.Service.Core.User" value="user" />
