--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -21,7 +21,7 @@
     <add key="LifeCycleManager.ExtensionsFolder" value="..\..\..\LifecycleManager.Extensions.Default\bin\Debug" />
     <add key="LifeCycleManager.TestServer.ExtensionsFolder" value="..\biz.dfch.CS.Entity.LifeCycleManager\bin\Debug" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
-    <add key="LifeCycleManager.Endpoint.Core" value="http://localhost:51719/api/Core.svc" />
+    <add key="LifeCycleManager.Endpoint.Core" value="http://localhost:51719/api/Core" />
     <add key="LifeCycleManager.Service.Core.User" value="user" />
     <add key="LifeCycleManager.Service.Core.Password" value="password" />
     <add key="LifeCycleManager.Server.ServerRoles" value="HOST" />
