--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -14,7 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Default.Tenant.Id" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
+    <add key="TenantId.Default" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
+    <add key="TenantId.Header.Key" value="Biz-Dfch-Tenant-Id"/>
     <add key="UserData.Database.Table.Prefix" value="Cumulus.dbo." />
     <add key="EntityController.Authentication.Value" value="" />
     <add key="EntityController.Authentication.Scheme" value="" />
