--- a/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.Tests/App.config
@@ -6,7 +6,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="Default.Tenant.Id" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
+    <add key="TenantId.Default" value="f61907fc-75a0-4303-8ad2-b8079fa2bb89" />
+    <add key="TenantId.Header.Key" value="Biz-Dfch-Tenant-Id"/>
     <add key="LifeCycleManager.ExtensionsFolder" value="" />
     <add key="LifeCycleManager.Endpoint.Core.Container.Name" value="Core" />
     <add key="LifeCycleManager.Endpoint.Core" value="http://test/api/Core.svc" />
