--- a/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.nuspec
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager/biz.dfch.CS.Entity.LifeCycleManager.nuspec
@@ -27,8 +27,8 @@ Telerik JustMock has to be licensed separately. Only the code samples (source co
         <dependencies>
 			<dependency id="biz.dfch.CS.StateMachine" version="1.0.3" />
 			<dependency id="biz.dfch.CS.System.Utilities" version="1.1.0" />
-			<dependency id="EntityFramework" version="6.1.3" targetFramework="net45" />
-			<dependency id="log4net" version="2.0.3" targetFramework="net45" />
+			<dependency id="EntityFramework" version="6.1.3" />
+			<dependency id="log4net" version="2.0.3" />
 			<dependency id="Microsoft.AspNet.WebApi" version="5.2.3" />
 			<dependency id="Microsoft.AspNet.WebApi.Client" version="5.2.3" />
 			<dependency id="Microsoft.AspNet.WebApi.Core" version="5.2.3" />
