connection string added to test servers web.config file for LifeCycleContext

--- a/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
+++ b/src/biz.dfch.CS.Entity.LifeCycleManager.TestServer/Web.config
@@ -30,7 +30,8 @@
     <add key="Application.Name" value="Cumulus" />
   </appSettings>
   <connectionStrings>
-    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test;" />
+    <add name="LifeCycleContext" connectionString="Server.\SQLEXPRESS;User ID=sa;Password=password;Database=LifeCycleManager"/>
+    <add name="LcmSecurityData" connectionString="Server=.\SQLEXPRESS;User ID=sa;Password=password;Database=Test" />
   </connectionStrings>
 
   <system.web>
